--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.stuart.righthererightnow.MainActivity"
-    android:padding="0dp">
+    android:padding="0dp"
+
+    >
 
     <ImageView
         android:layout_width="fill_parent"
@@ -43,16 +45,18 @@
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:drawableTop="@drawable/beer"
+            android:paddingTop="10dp"
             android:text="Drink"
             android:id="@+id/drinkButton"
             android:background="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
             android:typeface="sans"
-            android:layout_margin="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="0dp"
             android:textColor="#ffffff" />
 
         <Button
@@ -63,6 +67,9 @@
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:drawableTop="@drawable/food"
+            android:paddingTop="5dp"
+            android:paddingBottom="10dp"
             android:text="Food"
             android:id="@+id/foodButton"
             android:background="@color/colorPrimaryDark"
@@ -71,10 +78,10 @@
             android:typeface="sans"
             android:enabled="true"
             android:focusable="false"
-            android:layout_margin="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="0dp"
             android:textColor="#ffffff" />
 
         <Button
@@ -85,16 +92,18 @@
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:drawableTop="@drawable/coffee"
+            android:paddingTop="10dp"
             android:text="Coffee"
             android:id="@+id/coffeeButton"
             android:background="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
             android:typeface="sans"
-            android:layout_margin="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="0dp"
             android:textColor="#ffffff" />
         <Button
             android:layout_width="wrap_content"
@@ -104,16 +113,18 @@
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:drawableTop="@drawable/other"
+            android:paddingBottom="5dp"
             android:text="Other"
             android:id="@+id/funButton"
             android:background="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
             android:typeface="sans"
-            android:layout_margin="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="0dp"
             android:textColor="#ffffff" />
 
         <Button
@@ -124,16 +135,18 @@
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:text="Trending"
+            android:drawableTop="@drawable/recentactivity"
+            android:paddingBottom="8dp"
+            android:text="Recently \n Active"
             android:id="@+id/trendingButton"
             android:background="@color/colorPrimaryDark"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:typeface="sans"
-            android:layout_margin="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="0dp"
             android:textColor="#ffffff" />
 
         <Button
@@ -144,16 +157,18 @@
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:drawableTop="@drawable/favs"
+            android:paddingTop="5dp"
             android:text="My Favs"
             android:id="@+id/favButton"
             android:background="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
             android:typeface="sans"
-            android:layout_margin="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="0dp"
             android:textColor="#ffffff" />
 
         <Button
@@ -163,6 +178,8 @@
             android:layout_row="3"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:drawableTop="@drawable/search"
+            android:paddingTop="5dp"
             android:text="Search"
             android:id="@+id/searchButton"
             android:background="@color/colorPrimaryDark"
@@ -170,11 +187,12 @@
             android:layout_gravity="fill"
             android:textStyle="bold"
             android:typeface="sans"
-            android:layout_margin="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:textColor="#ffffff" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -183,16 +201,18 @@
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:drawableTop="@drawable/settings"
+            android:paddingTop="5dp"
             android:text="Settings"
             android:id="@+id/settingsButton"
             android:background="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
             android:typeface="sans"
-            android:layout_margin="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:textColor="#ffffff" />
 
 
