--- a/app/src/main/res/layout/listview_activity.xml
+++ b/app/src/main/res/layout/listview_activity.xml
@@ -11,13 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:paddingBottom="12dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="7dp">
+        android:padding="0dp">
 
         <TextView
             android:id="@+id/listview_item_title"
@@ -27,10 +28,19 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/listview_item_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="0dp"
+            android:textSize="12sp"
+            />
+
+        <TextView
             android:id="@+id/listview_item_short_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="5dp"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:textColor="@color/colorAccent"/>
     </LinearLayout>
 </LinearLayout>
