Updating the application

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,7 +113,8 @@
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:drawableTop="@drawable/other"
+            android:drawableTop="@drawable/otherwhite"
+            android:paddingTop="6dp"
             android:paddingBottom="5dp"
             android:text="Other"
             android:id="@+id/funButton"
