--- a/app/src/main/res/layout/activity_list_places.xml
+++ b/app/src/main/res/layout/activity_list_places.xml
@@ -13,7 +13,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="View On Map"
+        android:text="View The Map"
         android:id="@+id/viewOnMap"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
