--- a/app/src/main/res/layout/listview_activity.xml
+++ b/app/src/main/res/layout/listview_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/android_list_view_tutorial_with_example"
+    android:id="@+id/listView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
