--- a/app/src/main/res/layout/info_window_contents.xml
+++ b/app/src/main/res/layout/info_window_contents.xml
@@ -35,4 +35,12 @@
         android:layout_marginBottom="10dp"
         />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:id="@+id/wheel"
+        android:paddingTop="10dp"
+       />
+
 </LinearLayout>
