--- a/app/src/main/res/layout/activity_search_feature.xml
+++ b/app/src/main/res/layout/activity_search_feature.xml
@@ -21,7 +21,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="25dp"
-        android:layout_below="@+id/findPlace"
+        android:layout_below="@+id/wheel"
         android:id="@+id/searched_address"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_below="@+id/findPlace"
+        android:id="@+id/wheel"
+        android:paddingTop="10dp"
+        android:layout_alignParentEnd="false"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
